基础方法改动

--- a/src/main/resources/assets/novaeng_core/lang/zh_CN.lang
+++ b/src/main/resources/assets/novaeng_core/lang/zh_CN.lang
@@ -1,4 +1,4 @@
-item.hypernet_connect_card.tooltip.1=§9这张存储卡可以储存一个 HyperNet 网络的频段和坐标信息，存储的密钥经过重重加密。
+item.hypernet_connect_card.tooltip.1=§9这张存储卡可以储存一个 星辰网络 的频段和坐标信息，存储的密钥经过重重加密。
 item.hypernet_connect_card.tooltip.2=§9右击支持 HyperNet 的机械控制器，即可自动解析存储卡并连接至 HyperNet 计算网络。
 item.hypernet_connect_card.tooltip.3=§a存储卡可以重复使用。
 item.hypernet_connect_card.tooltip.4=§c警告：使用时请保持 HyperNet 计算网络中心在线。HyperNet 通讯距离无限，但是无法跨越维度。
